syntax = "proto3";
package spec;

import "google/protobuf/empty.proto";

service Catter {
    // RegisterCat creates a cat by CreateCatRequest data
    rpc RegisterCat(CreateCatRequest) returns (CreateCatResponse);
    rpc UpdateCatName(UpdateCatFieldRequest) returns (google.protobuf.Empty);
    rpc UpdateCatBio(UpdateCatFieldRequest) returns (google.protobuf.Empty);
}

// UpdateCatFieldRequest is used when need to update a field. It is not nesessary to specifiy a field if it is a string.
message UpdateCatFieldRequest {
    int64 id = 1;
    string field = 2;
}

message Response {
    // for now - HTTP codes
    int32 code = 1;
    string message = 2;
}

// CreateCatRequest is data for creating a cat
message CreateCatRequest {
    // name is a name of a cat
    string name = 1;

    // usename is unchangable username of a cat
    string username = 2;

    // bio is optional description of a cat
    optional string bio = 3;
}

// CreateCatResponse is answer of service during creating a cat
message CreateCatResponse {
    // id is an id of a cat, it is unique
    int64 id = 1;
}
